added randomization of penalty node in certain region